public/assets/css/workspace.css
input#fileElem.left-0 {
    display: none !important;
    background-color: #73C649 !important;
}

/* ----- TEXTS ----- */

.count {
    background-color: #B6192A;
    border-radius: 12px;
    margin-left: 5px;
    padding: 2px 8px;
}

/* bullet points */
ul.todo-list li {
    color: #8a8a8a;
}

ul.todo-list li a {
    font-weight: 400 !important;
    font-size: 18px !important;
    color: #8a8a8a;
}

p,
a,
span,
label,
address,
input,
textarea,
select {
    font-size: 18px !important;
}

@media (max-width: 991px) {

    p,
    a,
    span,
    label,
    address,
    input,
    textarea,
    select {
        font-size: 16px !important;
    }
}


/* ----- TABLE ----- */
.table-company-name {
    border-bottom: rgb(73, 73, 73) 2px solid;
}

.container-border {
    border: rgb(73, 73, 73) 0px solid;
}

.table-border {
    border: rgb(73, 73, 73) 2px solid;
}

table,
th,
tr,
td {
    padding-left: 15px !important;
    padding-right: 15px;
    font-family: 'Outfit', sans-serif !important;
    color: white !important;
    border: none;
}

th {
    background-color: #373738 !important;
    height: 55px;
    /* specific height */
    display: table-cell;
    vertical-align: middle;
}

tbody tr:nth-child(even) td {
    background-color: #232323 !important;
}

tbody tr:nth-child(odd) td {
    background-color: #202020 !important;
}

td {
    height: fit-content;
    /* Match the height of the header */
    display: table-cell;
    vertical-align: middle;
}


/* The minimum width of the table is 836px and will become scrollable it tries to get any smaller */
.table-container {
    overflow: hidden;
}

.table-container-scroll {
    overflow-x: auto;
}

.table-container-scroll table {
    min-width: 836px;
    width: 100%;
    table-layout: fixed;
}

@media (max-width: 836px) {
    .table-container-scroll table {
        width: 836px;
    }
}


a.btn {
    min-width: 0 !important;
    height: 100%;
    flex: 1 1 auto;
}

.btn-group {
    /* margin: auto; */
    min-width: 0 !important;
    max-width: fit-content;
    border-radius: 8px;
    display: flex;
    flex-wrap: nowrap;
}

.btn-group.th-btn {
    margin-left: auto;
}

.btn-group.option-btn {
    margin: auto;
}

img.icon {
    height: 20px;
    margin-right: 5px;
}


/* ----- PILLS ----- */
.center {
    margin-left: auto;
    margin-right: auto;
}

.pill {
    display: flex;
    align-items: center;
    text-align: center;
    flex-direction: row;
    min-width: 0px;
    max-width: fit-content;
    height: 30px;
    border-radius: 16px;

    padding: 16px;
    /* margin-left: auto;
    margin-right: auto; */
}

.pill-red {
    background: linear-gradient(90deg, #E63D08 0%, #B6192A 65.37%, #9C063C 100%);
}

.pill-yellow {
    background: linear-gradient(90deg, #FED816 0%, #D38001 100%);
}

.pill-green {
    background: linear-gradient(90deg, #73C649 0%, #128850 100%);
}



/* ----- CALENDAR ----- */
.calendar {
    display: grid;
    grid-template-columns: repeat(7, 1fr);
    gap: 10px;
    padding: 10px;
    background-color: #282828;
    /* border-radius: 10px; */
}

.calendar div {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 40px;
    color: white;
}

.calendar .header {
    font-weight: 600;
}

.calendar .day {
    background-color: #202020;
    border-radius: 5px;
}

.calendar-header {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1.2em;
    color: white;
    margin-bottom: 10px;
    font-weight: 600;
}




/* ----- CUSTOM ALERT BOX ----- */
.custom-alert {
    position: fixed;
    top: 70px;
    left: 50%;
    transform: translateX(-50%) scale(0);
    background-color: #333;
    color: #fff;
    padding: 10px 20px;
    border-radius: 5px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    z-index: 1000;
    opacity: 0;
    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
}

.custom-alert.show {
    opacity: 1;
    transform: translateX(-50%) scale(1);
    animation: bounceInAlert 0.35s forwards, fadeOut 0.45s 2s forwards;
}

/* ----- MODAL ----- */

.btn-close {
    width: 10px;
    height: 10px;
    background-image: url('../images/close.svg');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    border: none;
    cursor: pointer;
}

.btn-close:active {
    border: none;
}

/* Override Bootstrap padding for modal */
body.modal-open {
    padding-right: 0 !important;
}

.modal {
    padding-bottom: 70px;
    overflow-y: scroll;
    -ms-overflow-style: none !important;
    /* Hide scrollbar in Internet Explorer and Edge */
    scrollbar-width: none !important;
    /* Hide scrollbar in Firefox */
}

.modal::-webkit-scrollbar {
    width: 0px;
    /* Hide scrollbar in WebKit browsers */
    background: transparent;
    /* Optional: helps with visibility in some cases */
}

.modal-dialog {
    top: 30%;
    overflow: hidden;
    border: 2px solid rgb(73, 73, 73);
    border-radius: 8px;
    background: none;
    transition: background-color 0.3s ease;
    box-shadow: rgba(0, 0, 0, 0.726) 0px 0px 20px;
}

.modal-content {
    border: none;
    background: none;
}

.modal-header {
    border-bottom: none;
    background-color: #373738;
}

.modal-header:active {
    cursor: grabbing;
}

.modal-body {
    background-color: #202020;
}

.modal.fade .modal-dialog {
    transition: transform 0.1s ease-out, opacity 0.5s ease-out;
}

.modal.fade.show .modal-dialog {
    animation: bounceIn 0.35s;
}

.modal.fade:not(.show) .modal-dialog {
    animation: fadeOut 0.4s;
}

/* Default styles for larger screens */
.modal-image-container {
    max-height: 380px;
    overflow: hidden;
}

.modal-image {
    width: 100% !important;
}

/* ----- JQuery UI Datepicker ----- */
/* WHOLE DATEPICKER CONTAINER */
.ui-datepicker {
    overflow: hidden !important;
    padding: 0 !important;
    border-radius: 5px !important;
    border: 2px solid #2f2f2f !important;
    position: absolute !important;
    width: fit-content !important;
    background: #202020 !important;
    color: white !important;
    box-shadow: #0000008f 0px 0px 25px !important;
}

/* MONTH NEXT BUTTONS */
.ui-datepicker-prev,
.ui-datepicker-next {
    transition: background 0.1s ease-in-out !important;
}

.ui-datepicker-prev:hover,
.ui-datepicker-next:hover {
    border: none !important;
    background: #3a224a !important;
    cursor: pointer !important;
}

/* MONTH CONTAINER */
.ui-datepicker-header {
    border: none !important;
    border-radius: 0 !important;
    background: #202020 !important;
    color: white !important;
}

/* MONTH TEXT */
.ui-datepicker-title {
    border: none !important;
    color: white !important;
}

/* DAY CONTAINER */
.ui-datepicker th {
    background: #7c16c0 !important;
    color: white !important;
}

/* DATE UNSELECTED */
.ui-state-default,
.ui-widget-content .ui-state-default,
.ui-widget-header .ui-state-default,
.ui-button,
.ui-button:active,
.ui-button:focus {
    text-align: center !important;
    border: none !important;
    background: none !important;
    color: white !important;
    width: 2em !important;
    height: 2em !important;
    line-height: 2em !important;
    display: flex !important;
    align-items: center !important;
    justify-content: center !important;
    border-radius: 50% !important;
    transition: background 0.1s ease-in-out !important;
}

/* DATE HOVER EFFECT */
.ui-state-default:hover,
.ui-widget-content .ui-state-default:hover,
.ui-widget-header .ui-state-default:hover,
.ui-button:hover,
.ui-button:active:hover,
.ui-button:focus:hover {
    background: #3a224a !important;
    color: white !important;
    border-radius: 50% !important;
}

/* DATE SELECTED */
.ui-state-active,
.ui-widget-content .ui-state-active,
.ui-widget-header .ui-state-active,
.ui-button.ui-state-active:hover {
    text-align: center !important;
    border: none !important;
    border-radius: 50% !important;
    background: #7c16c0 !important;
    color: white !important;
}

.ui-datepicker-calendar tbody tr td {
    padding: 5px !important;
}

/* WEEKEND (SAT & SUN) */
/* .ui-datepicker-week-end a {
    color: red !important;
} */

